[gd_scene load_steps=20 format=2]

[ext_resource path="res://fonts/Answer.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/mainmenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/icons8-play-96.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/power.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/trophy.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/gear.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/shoppingCart.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/icons8-star-filled-64.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=3]
size = 130
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 70
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 80
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 80
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 52
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 81
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.964706, 0.113725, 0.239216, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../GameTitle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../GameTitle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "intro"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("../GameTitle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../GameTitle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "outro"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("../GameTitle:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../GameTitle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="GameTitle" type="MarginContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_top = 60

[node name="CenterContainer" type="CenterContainer" parent="GameTitle"]
margin_top = 60.0
margin_right = 720.0
margin_bottom = 1280.0

[node name="VBoxContainer2" type="VBoxContainer" parent="GameTitle/CenterContainer"]
margin_left = 155.0
margin_top = 158.0
margin_right = 565.0
margin_bottom = 1062.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 200

[node name="Title" type="VBoxContainer" parent="GameTitle/CenterContainer/VBoxContainer2"]
margin_right = 410.0
margin_bottom = 191.0
alignment = 2

[node name="Label" type="Label" parent="GameTitle/CenterContainer/VBoxContainer2/Title"]
modulate = Color( 0.964706, 0.113725, 0.239216, 1 )
margin_right = 410.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 3 )
text = "SHOT"
align = 1

[node name="Label3" type="Label" parent="GameTitle/CenterContainer/VBoxContainer2/Title/Label"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = -41.5
margin_right = 116.5
margin_bottom = 73.5
custom_fonts/font = SubResource( 3 )
text = "SHOT"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameTitle/CenterContainer/VBoxContainer2/Title"]
margin_top = 119.0
margin_right = 410.0
margin_bottom = 191.0
custom_constants/separation = 17
alignment = 1

[node name="Label2" type="Label" parent="GameTitle/CenterContainer/VBoxContainer2/Title/HBoxContainer"]
margin_left = 86.0
margin_top = 4.0
margin_right = 121.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 12 )
text = "N"
align = 1

[node name="Label4" type="Label" parent="GameTitle/CenterContainer/VBoxContainer2/Title/HBoxContainer/Label2"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_left = -9.0
margin_top = 16.0
margin_right = 26.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 12 )
text = "N"
align = 1

[node name="Label3" type="Label" parent="GameTitle/CenterContainer/VBoxContainer2/Title/HBoxContainer"]
modulate = Color( 0.964706, 0.113725, 0.239216, 1 )
margin_left = 138.0
margin_right = 324.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 7 )
text = "SWIFT"
align = 1

[node name="Label4" type="Label" parent="GameTitle/CenterContainer/VBoxContainer2/Title/HBoxContainer/Label3"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_left = -8.0
margin_top = 13.0
margin_right = 178.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 8 )
text = "SWIFT"
align = 1

[node name="Score" type="VBoxContainer" parent="GameTitle/CenterContainer/VBoxContainer2"]
margin_top = 391.0
margin_right = 410.0
margin_bottom = 514.0

[node name="Label" type="Label" parent="GameTitle/CenterContainer/VBoxContainer2/Score"]
margin_right = 410.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.964706, 0.113725, 0.239216, 1 )
custom_fonts/font = SubResource( 9 )
text = "BEST"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameTitle/CenterContainer/VBoxContainer2/Score"]
margin_top = 50.0
margin_right = 410.0
margin_bottom = 123.0
alignment = 1

[node name="Label2" type="Label" parent="GameTitle/CenterContainer/VBoxContainer2/Score/HBoxContainer"]
margin_left = 167.0
margin_right = 243.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 10 )
text = "27"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="GameTitle/CenterContainer/VBoxContainer2/Score/HBoxContainer"]
visible = false
margin_left = 230.0
margin_top = 9.0
margin_right = 300.0
margin_bottom = 79.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="GameTitle/CenterContainer/VBoxContainer2"]
margin_top = 714.0
margin_right = 410.0
margin_bottom = 904.0
custom_constants/separation = 20

[node name="Button" type="Panel" parent="GameTitle/CenterContainer/VBoxContainer2/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 410.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
mouse_default_cursor_shape = 2
custom_styles/panel = SubResource( 11 )

[node name="startButton" type="TextureButton" parent="GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/Button"]
modulate = Color( 0.0705882, 0.0941176, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.0
margin_top = -50.0
margin_right = 227.0
margin_bottom = 50.0
rect_min_size = Vector2( 20, 100 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="GameTitle/CenterContainer/VBoxContainer2/VBoxContainer"]
margin_top = 100.0
margin_right = 410.0
margin_bottom = 190.0
custom_constants/separation = 40
alignment = 1

[node name="Panel" type="Panel" parent="GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_right = 110.0
margin_bottom = 90.0
rect_min_size = Vector2( 110, 90 )
custom_styles/panel = SubResource( 13 )

[node name="TextureRect" type="TextureRect" parent="GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer/Panel"]
modulate = Color( 0.0705882, 0.0941176, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Panel2" type="Panel" parent="GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 260.0
margin_bottom = 90.0
rect_min_size = Vector2( 110, 90 )
custom_styles/panel = SubResource( 13 )

[node name="TextureRect" type="TextureRect" parent="GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer/Panel2"]
modulate = Color( 0.0705882, 0.0941176, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Panel3" type="Panel" parent="GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 240.0
margin_right = 330.0
margin_bottom = 90.0
rect_min_size = Vector2( 90, 90 )
custom_styles/panel = SubResource( 13 )

[node name="TextureRect" type="TextureRect" parent="GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer/Panel3"]
modulate = Color( 0.0705882, 0.0941176, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Panel4" type="Panel" parent="GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 300.0
margin_right = 410.0
margin_bottom = 90.0
rect_min_size = Vector2( 110, 90 )
custom_styles/panel = SubResource( 13 )

[node name="TextureRect" type="TextureRect" parent="GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/HBoxContainer/Panel4"]
modulate = Color( 0.0705882, 0.0941176, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Animations" type="Node2D" parent="."]

[node name="Tween" type="Tween" parent="Animations"]

[node name="GameTitleAnim" type="AnimationPlayer" parent="Animations"]
anims/RESET = SubResource( 4 )
anims/intro = SubResource( 5 )
anims/outro = SubResource( 6 )

[node name="Timers" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="Timers"]

[connection signal="pressed" from="GameTitle/CenterContainer/VBoxContainer2/VBoxContainer/Button/startButton" to="." method="_on_startButton_pressed"]
